# qif

./: .gitignore  ABOUT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GLOSSARY.md  PROGRESS.md  README.AI.md  README.md  SECURITY.md  TLDR.md  brand.json
.github/: WORKFLOWS.md
.github/workflows/: accessibility.yml  auto-index.yml  fieldjournal-viz.yml  publish.yml  qa.yml  security-audit.yml  security.yml  sync-brand.yml  tests.yml  wiki-sync.yml
MAIN/: ACADEMIC_LANDSCAPE.md  INDEX.md  NEUROETHICS_ALIGNMENT.md  NEUROSECURITY_IMPLEMENTATION.md  ONI_WIKI.md  README.md  RELATED_WORK.md
MAIN/framework-v2/: README.md
MAIN/governance/: INFORMED_CONSENT_FRAMEWORK.md  NEUROETHICS_ALIGNMENT.md  PEDIATRIC_CONSIDERATIONS.md  POST_DEPLOYMENT_ETHICS.md  README.md  TRANSPARENCY.md
MAIN/interactive-oni-visualizations/: README.md
MAIN/legacy-core/: INDEX.md  README.md
MAIN/oni-academy/: ONI_ACADEMY.md  README.md  pyproject.toml
MAIN/oni-academy/oni_academy/: __init__.py  _brand.py  cli.py
MAIN/oni-framework/: API.md  CHANGELOG.md  ONI_LAYERS.md  README.md  pyproject.toml
MAIN/oni-framework/oni/: __init__.py  cli.py
MAIN/oni-framework/oni/neurosecurity/: consent.py
MAIN/oni-framework/oni/ui/: app.py  styles.py
MAIN/oni-visualizations/: 01-coherence-metric-playground.html  02-oni-layer-explorer.html  03-neural-killchain-visualizer.html  04-nsam-checkpoint-simulator.html  05-scale-frequency-navigator.html  README.md  index.html
MAIN/project/: KANBAN.md  OBSIDIAN_TASKS_2026-01-25.md  prd.json
MAIN/publications/: MEDIUM_TEMPLATE.md  PROCESS_IMPROVEMENTS.md  PUBLISHING_INSTRUCTIONS.md
MAIN/qif/: QIF-FIELD-JOURNAL.md  QIF-WHITEPAPER.md  README.md
MAIN/resources/: EXTERNAL_TOOLS.md  brand.json
MAIN/tara/: CLAUDE.md
MAIN/tara-neural-security-platform/: API.md  CLAUDE.md  README.md  pyproject.toml
MAIN/tara-nsec-platform/: README.md
ai-working/: GEMINI-REVIEW-BLACKHOLE.md  GEMINI-REVIEW-NSP-10of10.md  GEMINI-REVIEW-NSP-SPEC.md  NSP-PROTOCOL-SPEC.md  NSP-USE-CASE.md  NSP-VISUAL-PROTOCOL-RESEARCH.md  QI-FIELDJOURNAL.md  QIF-DERIVATION-LOG.md  QIF-FIELD-JOURNAL.md  QIF-FIELD-NOTES.md  QIF-NARRATIVE.md  QIF-TRUTH.md  QIF-WHITEPAPER-NARRATIVE.md  QIF-WHITEPAPER-v5.md  QIF-WHITEPAPER.md  QIF-WIKI.md
ai-working/Critical-Concerns/: README.md  ROGUE-AI-AND-INTERNAL-THREATS.md
autodidact/: README.md  pyproject.toml
autodidact/bci-zoom/: IMAGE_STITCH_WORKFLOW.md
autodidact/learnviz/: README.md  learnviz.py  ui.py
autodidact/neuroscience-bci/: README.md
autodidact/neuroscience-homework-todo/: README.md
autodidact/oni-academy/: README.md  pyproject.toml
docs/: CNAME  NAV-SYSTEM-README.md  SIGNAL_VISUALIZATION_DESIGN.md  WHY_WAVES_ARE_CIRCLES.md  content-manifest.json  index.html  nav-demo.html
docs/about/: index.html
docs/bci-news/: feed-sources.js  index.html
docs/blog/: index.html
docs/bridge/: index.html
docs/classical/: index.html
docs/coherence-metric/: 2026-01-16 - Your Brain Has a Spam Filter. Can We Reverse-Engineer It.md  Coherence_Metric_Detailed_Paper.md  Week1_Coherence_Metric_Medium.md
docs/css/: nav-dropdown.css
docs/documentation/: index.html
docs/governance/: index.html
docs/js/: nav-config.js  nav-dropdown.js
docs/legacy/: index.html
docs/neural-firewall/: 2026-01-16 - Your Brain Needs a Firewall — Here’s What It Would Look Like.md
docs/neural-ransomware/: 2026-01-17 - Neural Ransomware Isn’t Science Fiction.md  Week2_Neural_Ransomware_Medium.md  Week2_Neural_Ransomware_Paper.md
docs/oni-framework/: 2026-01-15 - The OSI of Mind Securing Human-AI Interfaces.md  ONI_Medium_Post.md  The Organic Network Interface (ONI) Framework.md
docs/oni-visualizations/: README.md  package.json  tsconfig.json
docs/quantum/: index.html
docs/research/: index.html
docs/scale-frequency/: Week3_Scale_Frequency_Medium.md  Week3_Scale_Frequency_Paper.md
docs/v1/: index.html
docs/v2/: index.html
docs/visualizations/: 01-coherence-metric-playground.html  02-oni-layer-explorer.html  03-academic-alignment.html  03-neural-killchain-visualizer.html  04-nsam-checkpoint-simulator.html  05-scale-frequency-navigator.html  06-oni-attack-matrix.html  06-oni-threat-matrix.html  07-privacy-preserving-monitoring.html  08-oni-framework-viz.html  09-governance-stack.html  10-attack-defense-flow.html  11-wave-spectrum-explorer.html  12-qif-3d-model.html  13-qi-equation-explorer.html  design-system.html  index.html
docs/whitepaper/: index.html
neuroscience-bci/: README.md
neuroscience-homework-todo/: README.md
neurosec-research/: PARTNERSHIPS.md
neurosec-research/oni-framework/: API.md  ONI_LAYERS.md  ONI_THREAT_MATRIX.md  README.md  (+1 more)
oni-demo-motion/: package-lock.json  package.json
oni-demo-video/: package-lock.json  package.json
project/: ROADMAP.md  generate_roadmap.py  prd.json
publications/: PAPER_TEMPLATE_APA.md
scripts/: fieldjournal_viz.py  sync_brand.py
(+158 files in other folders)
