[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oni-academy"
version = "0.1.3"
description = "ONI Academy - Educational platform for neurosecurity and brain-computer interface security concepts"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Kevin L. Qi"}
]
keywords = [
    "neurosecurity",
    "education",
    "brain-computer-interface",
    "BCI",
    "neural-security",
    "learning",
    "interactive",
    "cybersecurity",
    "neuroethics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Security",
]

dependencies = [
    "oni-framework>=0.2.0",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
full = [
    "oni-academy[ui]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://qikevinl.github.io/ONI/"
Documentation = "https://github.com/qikevinl/ONI/blob/main/MAIN/oni-academy/ONI_ACADEMY.md"
Repository = "https://github.com/qikevinl/ONI"
Issues = "https://github.com/qikevinl/ONI/issues"

[project.scripts]
oni-academy = "oni_academy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["oni_academy"]

[tool.hatch.build.targets.sdist]
include = [
    "oni_academy",
    "/README.md",
    "/ONI_ACADEMY.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
