[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oni-framework"
version = "0.2.0"
description = "Neural security framework for brain-computer interfaces. Calculate signal trust scores, filter suspicious signals, anonymize neural data, and validate BCI communications against the 14-layer ONI model."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Kevin L. Qi", email = "kevin@qikevinl.com"}
]
maintainers = [
    {name = "Kevin L. Qi", email = "kevin@qikevinl.com"}
]
keywords = [
    "brain-computer-interface",
    "BCI",
    "neural-security",
    "neurosecurity",
    "neuroethics",
    "neuroscience",
    "cybersecurity",
    "signal-processing",
    "coherence-metric",
    "neural-firewall",
    "privacy",
    "EEG",
    "neural-interface",
    "medical-device-security",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]
viz = [
    "matplotlib>=3.5",
    "numpy>=1.21",
]
ui = [
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
]
all = [
    "oni-framework[dev,viz,ui]",
]

[project.urls]
Homepage = "https://qikevinl.github.io/ONI/"
Documentation = "https://github.com/qikevinl/ONI/tree/main/MAIN/oni-framework"
Repository = "https://github.com/qikevinl/ONI"
Issues = "https://github.com/qikevinl/ONI/issues"
Changelog = "https://github.com/qikevinl/ONI/blob/main/MAIN/oni-framework/CHANGELOG.md"

[project.scripts]
oni = "oni.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["oni*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
